fix: min-height for 100vh on Safari

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,4 +6,8 @@
   .h-screen {
     height: -webkit-fill-available;
   }
+
+  .min-h-screen {
+    min-height: -webkit-fill-available;
+  }
 }
